// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSwitch assigns automatically generated ID to label 1`] = `
<div
  class="euiSwitch"
>
  <input
    class="euiSwitch__input"
    id="generated-id"
    type="checkbox"
  />
  <span
    class="euiSwitch__body"
  >
    <span
      class="euiSwitch__thumb"
    />
    <span
      class="euiSwitch__track"
    >
      <svg
        class="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      />
      <svg
        class="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon euiSwitch__icon--checked"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      />
    </span>
  </span>
</div>
`;

exports[`EuiSwitch is rendered 1`] = `
<div
  class="euiSwitch testClass1 testClass2"
>
  <input
    aria-label="aria-label"
    class="euiSwitch__input"
    data-test-subj="test subject string"
    id="test"
    type="checkbox"
  />
  <span
    class="euiSwitch__body"
  >
    <span
      class="euiSwitch__thumb"
    />
    <span
      class="euiSwitch__track"
    >
      <svg
        class="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      />
      <svg
        class="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon euiSwitch__icon--checked"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      />
    </span>
  </span>
</div>
`;
